# lessonbase

./: .env.vps.example  .gitattributes  .gitignore  GOOGLE_CLOUD_CONSOLE_STEPS.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_SUMMARY.md  MIGRATION-CHECKLIST.md  QUICK_START.md  README.md  REORGANIZATION-SUMMARY.md  STRUCTURE-ANALYSIS.md  docker-compose.vps.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  fly.toml  migrate.sh  pyproject.toml  requirements.txt
backend/kennysolutions/: demo.docx  manage.py
backend/kennysolutions/apps/assignments/: models.py  serialisers.py  signals.py  views.py
backend/kennysolutions/apps/classes/: admin.py  models.py  serialisers.py  signals.py  views.py
backend/kennysolutions/apps/storage/: storage_backends.py  views.py
backend/kennysolutions/apps/subjects/: models.py  serializers.py  views.py
backend/kennysolutions/apps/user_accounts/: models.py  serializers.py  views.py
backend/kennysolutions/backend/: admin.py  apps.py  backends.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/kennysolutions/backend/migrations/: 0001_initial.py  0002_alter_subject_name.py  0002_initial.py  0002_remove_student_user_remove_teacher_user_and_more.py  0003_customeraccount_confirmation_token.py  0003_remove_classevent_event_ptr_and_more.py  0003_subject_remove_teacher_subject_teacher_subjects.py  0004_chat_message.py  0004_remove_customuser_is_student_and_more.py  0005_alter_customeraccount_options_alter_student_options_and_more.py  0005_chat_name.py  0006_customeraccount_profile_picture_url.py  0006_teacher_students.py  0007_alter_teacher_students.py  0007_customeraccount_name.py  (+10 more)
backend/kennysolutions/kennysolutions/: asgi.py  settings.py  urls.py  wsgi.py
backend/lessonbase/: manage.py
backend/lessonbase/backend/: adapters.py  admin.py  apps.py  auth_serializers.py  auth_views.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  tests.py  urls.py
backend/lessonbase/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/lessonbase/lessonbase/: asgi.py  settings.py  urls.py  wsgi.py
backend/stun/: Dockerfile  auth.go  fly.toml  go.mod  server.go  stun.go  stun_test.go
backend/stun/cmd/: main.go
(+277 files in other folders)
