[tool.poetry]
name = "kennysolutions"
version = "0.1.0"
description = ""
authors = ["kenzen92 <jamespeterkenny@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.2.5"
psycopg2-binary = ">=2.9.1"
djangorestframework = "3.15.1"
django-polymorphic = "3.1.0"
Faker = "24.4.0"
django-cors-headers = "4.3.1"
channels = "4.1.0"
daphne = "4.1.2"
django-storages = "1.14.3"
pillow = "10.3.0"
openai = "1.35.3"
python-docx = "1.1.2"
pymongo = "4.8.0"
mongoengine = "0.29.0"
gunicorn = "^23.0.0"
dj-database-url = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
